2012-08-15  Alexander V. Lukyanov <lav@yars.free.net>

	* Bencode.cc, Bencode.h: new ctor; Pack to xstring.
	* Filter.cc, Filter.h: (set_create_mode, set_lock) new methods,
	  do file locking if requested.
	* misc.cc, misc.h, attach.h: (get_nodename) new function.
	* xstring.cc, xstring.h: add explicit clone ctor; (move_here) new
	  method.

2012-08-08  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: add mt_metadata extension.

2012-08-07  Alexander V. Lukyanov <lav@yars.free.net>

	* Bencode.cc, Bencode.h: new ctor BeNode(const char *);
	  (ComputeLength, Pack, Format1) new methods.
	* buffer.h: add Put(char) method.
	* xmap.h: add add(const char*) method.
	* Torrent.cc, Torrent.h: add LTEP and FAST Extensions.

2012-07-26  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: send PROT after AUTH in any case, for servers
	  requiring a PROT command.

2012-07-25  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: don't try to upload if ALLO fails.

2012-07-19  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: fixed fatal error checking for gnutls.
	* IdNameCache.cc, IdNameCache.h: allow numeric names.

2012-07-03  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: tread decryption error as non-fatal.
	* ftpclass.cc: define TELNET_* ad char constants, get rid of type casts.
	* FileSet.cc: fixed buffer size (string was truncated).
	* Http.cc, resource.cc: add use-allprop settings.
	* HttpDirXML.cc: fixed PROPFIND result parsing.

2012-05-30  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: don't Feed at-finish commands if the command buffer is
	  not empty.
	* FileFeeder.cc, FileFeeder.h: read by 4K.
	* commands.cc: set need_exact_time=true when the time is needed at all,
	  this removes complex and incomplete guess logic.

2012-04-23  Solar Designer <solar@openwall.com>

	* Torrent.cc: fix for large PIDs.

2012-04-20  Alexander V. Lukyanov <lav@yars.free.net>
