@@ -58,11 +58,12 @@ public:
 
    entry *_each_begin();
    entry *_each_next();
-   const xstring *each_key() const { return &last_entry->key; }
+   const xstring& each_key() const { return last_entry->key; }
 
    int count() const { return entry_count; }
 
    void _move_here(_xmap &o);
+   void _empty();
 };
 
 template<class T> class xmap : public _xmap
@@ -95,6 +96,7 @@ public:
    const T& each_begin() { entry *e=_each_begin(); return e?payload(e):zero; }
    const T& each_next()  { entry *e=_each_next();  return e?payload(e):zero; }
    void move_here(xmap<T> &o) { _move_here(o); }
+   void empty() { _empty(); }
 };
 
 template<class T> T xmap<T>::zero;
@@ -105,7 +107,7 @@ public:
    xmap_p() : _xmap(sizeof(T*)) {}
    ~xmap_p() {
       for(entry *e=_each_begin(); e; e=_each_next())
-	 xfree(payload(e));
+	 delete(payload(e));
    }
    T*& payload_Lv(entry *e) {
       return *(T**)(e+1);
@@ -130,11 +132,11 @@ public:
       return 0;
    }
    void remove(const xstring& key) {
-      xfree(borrow(key));
+      delete(borrow(key));
    }
    void add(const xstring& key,T *e0) {
       entry *e=_add(key);
-      xfree(payload(e));
+      delete(payload(e));
       payload_Lv(e)=e0;
    }
    void add(const char *key,T *e0) { add(xstring::get_tmp(key),e0); }
@@ -142,6 +144,14 @@ public:
    T *each_next()  { entry *e=_each_next();  return e?payload(e):0; }
    void each_set(T *n) { payload_Lv(last_entry)=n; }
    void move_here(xmap_p<T> &o) { _move_here(o); }
+   void empty() {
+      for(int i=0; i<hash_size; i++) {
+	 while(map[i]) {
+	    delete(payload(map[i]));
+	    _remove(&map[i]);
+	 }
+      }
+   }
 };
 
 #endif // XMAP_H
